[subresource_filter] Duplicate settings notifications should not be logged

There are places in the code where global content setting changes
somehow notify our observer multiple times in a row.

To guard against this in the code, we cache the global setting in the
settings observer and only log metrics if a notification is received
which ended up changing the cached value.

Places which trigger these duplicate notifications should probably
be fixed too.

BUG=721396

Review-Url: https://codereview.chromium.org/2873123004
Cr-Commit-Position: refs/heads/master@{#471399}

Former-commit-id: 5ce9a842e75528da201d21f2571eb7dba991d044